Fix alignment in the linkedin logo of volunteer detail

--- a/src/pages/VolunteerDetail/styles.module.scss
+++ b/src/pages/VolunteerDetail/styles.module.scss
@@ -5,6 +5,10 @@
   flex-wrap: wrap;
 }
 
+.linkedinLink {
+  align-self: center;
+}
+
 .linkedinLogo {
   align-self: center;
   height: $linkedinLogoHeight;
